# seed-app-todomvc

./: Cargo.toml  README.md  index.html  template.html
.play-seed/: config.yml  main.html  main.js
src/: lib.rs
